src/components/commonComps/styles/FirstSection.css
.firstSection {
    position: relative;


}
.firstSectionWrapper {
    position: relative;
    z-index: 20;
}

.skewRight {
    right: 0;
    left: 0;
    position: absolute;
    height: 100%;
}

.skewLeft {
    right: 0;
    left: 0;
    position: absolute;
    height: 100%;
}
.firstSectionGraphic {
    position: relative;
    margin: auto 0;
    margin-left: 2vw;
    margin-bottom: 2vh;

}

.firstSectionTitle > h3 {

    font-size: 1.6rem;
    margin: auto 0;
    color: #fafafa;
}
.firstSectionText {
    font-size: 1.1rem;
    margin-top: 4vh;
    color: #fafafa;
}
/*
@media only screen and (min-width: 320px) and (max-width: 410px) {
.firstSectionTitle > h3 {
    font-size: 1.3rem;
}
.firstSectionText {
    margin-top: 0vh;
    font-size: 1.1rem;
}
.firstSectionGraphic {
    max-width: 25vw;
}
}
@media only screen and (min-width: 668px) {
.firstSectionWrapper {
    max-width: 500px;
}
}
@media only screen and (min-width: 860px) {
.firstSectionTitle > h3 {
    font-size: 1.75rem;
}
.firstSectionText {
    font-size: 1.2rem;
}
}
@media only screen and (min-width: 1030px) {
.firstSectionWrapper {
    max-width: 600px;
}
}
*/

